chore: use eslint and prettier

--- a/core/package.json
+++ b/core/package.json
@@ -83,12 +83,12 @@
     "css.minify": "cleancss -O2 -o ./css/ionic.bundle.css ./css/ionic.bundle.css",
     "css.sass": "sass --embed-sources src/css:./css",
     "eslint": "eslint src",
-    "lint": "npm run lint.ts && npm run lint.sass",
+    "lint": "npm run lint.ts && npm run lint.sass && npm run prettier -- --write",
     "lint.fix": "npm run lint.ts.fix && npm run lint.sass.fix",
     "lint.sass": "stylelint \"src/**/*.scss\"",
     "lint.sass.fix": "npm run lint.sass -- --fix",
-    "lint.ts": "tslint --project .",
-    "lint.ts.fix": "tslint --project . --fix",
+    "lint.ts": "npm run eslint",
+    "lint.ts.fix": "npm run eslint -- --fix",
     "prerelease": "npm run validate && np prerelease --yolo --any-branch --tag next",
     "prerender.e2e": "node scripts/testing/prerender.js",
     "prettier": "prettier \"./src/**/*.{html,ts,tsx,js,jsx}\"",
