--- a/core/package.json
+++ b/core/package.json
@@ -70,9 +70,6 @@
     "stylelint": "^13.6.1",
     "stylelint-order": "^4.1.0",
     "swiper": "5.4.1",
-    "tslint": "^6.1.3",
-    "tslint-ionic-rules": "0.0.21",
-    "tslint-react": "^5.0.0",
     "typescript": "^4.0.5"
   },
   "scripts": {
@@ -87,12 +84,12 @@
     "css.minify": "cleancss -O2 -o ./css/ionic.bundle.css ./css/ionic.bundle.css",
     "css.sass": "sass --embed-sources src/css:./css",
     "eslint": "eslint src",
-    "lint": "npm run lint.ts && npm run lint.sass",
+    "lint": "npm run lint.ts && npm run lint.sass && npm run prettier -- --write",
     "lint.fix": "npm run lint.ts.fix && npm run lint.sass.fix",
     "lint.sass": "stylelint \"src/**/*.scss\"",
     "lint.sass.fix": "npm run lint.sass -- --fix",
-    "lint.ts": "tslint --project .",
-    "lint.ts.fix": "tslint --project . --fix",
+    "lint.ts": "npm run eslint",
+    "lint.ts.fix": "npm run eslint -- --fix",
     "prerelease": "npm run validate && np prerelease --yolo --any-branch --tag next",
     "prerender.e2e": "node scripts/testing/prerender.js",
     "prettier": "prettier \"./src/**/*.{html,ts,tsx,js,jsx}\"",
