--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
         - uses: actions/checkout@v2
           with:
-            # Checkout the latest commit in this branch
+            # Checkout the latest commit in this branch a
             ref: ${{ github.event.pull_request.head.sha }}
       - uses: ./.github/workflows/actions/build-core
 
