--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -5,8 +5,6 @@ on:
     # Run every Monday-Friday
     # at 6:00 UTC (6:00 am UTC)
     - cron: '00 06 * * 1,5'
-  pull_request:
-    branches: [ '**' ]
 
 jobs:
   nightly-build:
@@ -37,7 +35,7 @@ jobs:
         # The date should output YYYYMMDD
         # so that it is human readable
         run: |
-          echo "DATE=abc123" >> $GITHUB_ENV
+          echo "DATE=$(date +%Y%m%d)" >> $GITHUB_ENV
           echo "CURRENT_VERSION=$(node ./.scripts/bump-version.js)" >> $GITHUB_ENV
         shell: bash
       - name: Checkout Nightly Branch
