--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,7 @@ on:
 # When pushing a new commit we should
 # cancel the previous test run to not
 # consume more runners than we need to.
+# test123
 concurrency:
   group: ${{ github.ref }}
   cancel-in-progress: true
