--- a/.github/workflows/actions/build-angular/action.yml
+++ b/.github/workflows/actions/build-angular/action.yml
@@ -46,6 +46,10 @@ runs:
       run: npm run build
       shell: bash
       working-directory: ./angular
+    - name: Check Diff
+      run: git diff --exit-code
+      shell: bash
+      working-directory: ./angular
     - uses: ./.github/workflows/actions/upload-archive
       with:
         name: ionic-angular
